{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 109,
  "lineage": "86be29c0-654b-4a11-ec47-7642f93ba67a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Day3_EIP_For_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a004722e492c3f15",
            "association_id": "eipassoc-08154e73872c20921",
            "domain": "vpc",
            "id": "eipalloc-0a004722e492c3f15",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0eaef2aa0f7d9171b",
            "private_dns": "ip-10-0-0-238.ap-south-1.compute.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-13-235-253-252.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.253.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Day3_EIP_For_NAT"
            },
            "tags_all": {
              "Name": "Day3_EIP_For_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day3_Private_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-08a4f0d2ba57e1d25",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a4f0d2ba57e1d25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041b86ed56cab53c2",
            "private_dns": "ip-10-0-0-54.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04cf2cd11bdf5c870",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cd9a15b93d13601",
            "tags": {
              "Name": "Day3_Private_Instance"
            },
            "tags_all": {
              "Name": "Day3_Private_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a95819c333fe9cc1"
            ]
          },
          "dependencies": [
            "aws_security_group.Day3_Security_Group_ssh_Private",
            "aws_subnet.Day3_Private_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day3_Public_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-0060d88204c03d0c4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0060d88204c03d0c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0220d38a7a5da9d2b",
            "private_dns": "ip-10-0-0-141.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.141",
            "public_ip": "43.205.236.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e41df9bd8bf5a5a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dabc42b4be121c3e",
            "tags": {
              "Name": "Day3_Public_Instance"
            },
            "tags_all": {
              "Name": "Day3_Public_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071f14d6ff4aebb50"
            ]
          },
          "dependencies": [
            "aws_security_group.Day3_Security_Group_ssh",
            "aws_subnet.Day3_Public_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Day3_Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:internet-gateway/igw-097447bceef8ad9e8",
            "id": "igw-097447bceef8ad9e8",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day3_Internet_Gateway"
            },
            "tags_all": {
              "Name": "Day3_Internet_Gateway"
            },
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Day3_NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a004722e492c3f15",
            "association_id": "eipassoc-08154e73872c20921",
            "connectivity_type": "public",
            "id": "nat-0dc23c4704f94ea15",
            "network_interface_id": "eni-0eaef2aa0f7d9171b",
            "private_ip": "10.0.0.238",
            "public_ip": "13.235.253.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dabc42b4be121c3e",
            "tags": {
              "Name": "Day3_NAT_Gateway"
            },
            "tags_all": {
              "Name": "Day3_NAT_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.Day3_EIP_For_NAT",
            "aws_subnet.Day3_Public_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Day3_Private_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b776039b9bed5631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dc23c4704f94ea15",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b776039b9bed563",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Day3_EIP_For_NAT",
            "aws_nat_gateway.Day3_NAT_Gateway",
            "aws_route_table.Day3_Private_Route_Table",
            "aws_subnet.Day3_Public_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Day3_Public_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-097447bceef8ad9e8",
            "id": "r-rtb-03816d2e9e2d2e2c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03816d2e9e2d2e2c0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Day3_Internet_Gateway",
            "aws_route_table.Day3_Public_Route_Table",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day3_Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-09b776039b9bed563",
            "id": "rtb-09b776039b9bed563",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dc23c4704f94ea15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day3_Private_Route_Table"
            },
            "tags_all": {
              "Name": "Day3_Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day3_Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-03816d2e9e2d2e2c0",
            "id": "rtb-03816d2e9e2d2e2c0",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097447bceef8ad9e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day3_Public_Route_Table"
            },
            "tags_all": {
              "Name": "Day3_Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Day3_Private_Route_Table_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015518861a88e12f4",
            "route_table_id": "rtb-09b776039b9bed563",
            "subnet_id": "subnet-06cd9a15b93d13601"
          },
          "dependencies": [
            "aws_route_table.Day3_Private_Route_Table",
            "aws_subnet.Day3_Private_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Day3_Public_Route_Table_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5243d10979231c6",
            "route_table_id": "rtb-03816d2e9e2d2e2c0",
            "subnet_id": "subnet-0dabc42b4be121c3e"
          },
          "dependencies": [
            "aws_route_table.Day3_Public_Route_Table",
            "aws_subnet.Day3_Public_Subnet",
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day3_Security_Group_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-071f14d6ff4aebb50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/25"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-071f14d6ff4aebb50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240301173148635900000002",
            "name_prefix": "terraform-",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Day3_Security_Group_ssh"
            },
            "tags_all": {
              "Name": "Day3_Security_Group_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day3_Security_Group_ssh_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-0a95819c333fe9cc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a95819c333fe9cc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240301173148636300000003",
            "name_prefix": "terraform-",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Day3_Security_Group_ssh_Private"
            },
            "tags_all": {
              "Name": "Day3_Security_Group_ssh_Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day3_Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-06cd9a15b93d13601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cd9a15b93d13601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day3_Private_Subnet"
            },
            "tags_all": {
              "Name": "Day3_Private_Subnet"
            },
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day3_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-0dabc42b4be121c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dabc42b4be121c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day3_Public_Subnet"
            },
            "tags_all": {
              "Name": "Day3_Public_Subnet"
            },
            "vpc_id": "vpc-0ac5911c6c1b2c701"
          },
          "dependencies": [
            "aws_vpc.Day3_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Day3_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:vpc/vpc-0ac5911c6c1b2c701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ef4d27295aecadda",
            "default_route_table_id": "rtb-0610032e655da42a5",
            "default_security_group_id": "sg-0513bd9172d577c3b",
            "dhcp_options_id": "dopt-013306c3265fdedcc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac5911c6c1b2c701",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0610032e655da42a5",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day3_VPC"
            },
            "tags_all": {
              "Name": "Day3_VPC"
            }
          }
        }
      ]
    }
  ]
}